9) Backport some fixes from vanilla kernel.<br>
10) Add config target for USB 2T2R devices at 8Mb Flash.<br>
11) Try fix regression for Asus RT-32G rev b1.<br>
12) Update HW_NAT code to 0.9 version.<br>
13) Fix send error in raeth (decrease tx timeout).<br>
14) Optimize service restart script for speedup.<br>
15) Correct some defaults for WDS mode.<br>
16) Fix portforward at vpn enabled.<br>
17) Backport ch341 serial driver.<br>
18) Add vpnService variabe to select PPPOE service name to connect.<br>
19) Improve kernel sched performance.<br>
20) Rework QoS WebUI.<br>
21) Fix boot.img build.<br>
22) Kernel irq code cleanup.<br>
23) In pppoe pure mode no need add MASQ rules to localnet.<br>
24) Use zeroconf for obtain ip adress for wan in pure pppoe mode. Need for correct igmpproxy work.<br>
25) Add zeroconf mode for WAN wanConnectionMode=ZERO.<br>
26) No more need dev.tgz in rootfs. Save flash size and more speed.<br>
27) Add ntfs-3g p910nd to buildtree (8Mb devices with USB).<br>
28) Fix auto start vpnhelper in pure pppoe mode.<br>
29) Add libcurl, libevent, transmission to 8Mb devices.<br>
30) Correct lib alias.<br>
31) WPA supplicatnt enable by default for 8Mb devices.<br>
32) Openssl up to 0.9.8r version.<br>
33) Add libpcap (8Mb devices).<br>
34) Add tcpdump (8Mb devices).<br>
35) Fix IgmpSnooping enable/disable.<br>
36) Fix VPN Peer DNS enable/disable.<br>
37) Fix ntp date sync and some situations.<br>
38) New init scripts structure for boot speedup and moe clean logs.<br>
39) Add libtr to romfs. Need for some application. 4K+.<br>
40) Fix timezone.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>